# CrowdBag

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  crowd_sim.cpp  crowdbag.hpp  crowdbag_node.cpp  crowdbag_py.cpp  crowdbag_server.cpp  main.cpp  package.xml  scenario_1to10_45crossing.cpp  scenario_1to10_crossing.cpp  scenario_1to10_parallel.cpp  scenario_1to1_45crossing.cpp  scenario_1to1_crossing.cpp  scenario_1to1_parallel.cpp  scenario_circle10.cpp  scenario_circle15.cpp  scenario_circle5.cpp  scenario_oneway.cpp  simulations.rar  test.cpp  test.py  xml_loader.hpp
craal-core/: CMakeLists.txt  core.pri
craal-core/include/: Calibration.h  Configurable.h  ConfigurationParser.h  CraalIncludes.h  Dummy.h  Experiment.h  Experiment3D.h  Metric.h  PDF.h  Parser.h  Parser3D.h  Pedestrian.h  Record.h  Record3D.h  ResourceLister.h  Simulation.h  Simulation3D.h  SimulationGeneric.h
craal-core/src/: Calibration.cpp  Configurable.cpp  ConfigurationParser.cpp  Dummy.cpp  Experiment.cpp  Experiment3D.cpp  Metric.cpp  PDF.cpp  Pedestrian.cpp  Record.cpp  Record3D.cpp  ResourceLister.cpp  Simulation.cpp  Simulation3D.cpp
models/: CMakeLists.txt  models-additional.cmake  models-additional.pri  models.pri
models/include/: Sampler.h  SimulationBoids.h  SimulationBoids3D.h  SimulationHelbing.h  SimulationHelbing3D.h  SimulationHyper.h  SimulationOpenCS.h  SimulationPowerLaw.h  SimulationRVO2-NAV.h  SimulationRVO2.h  SimulationRVO23D.h  SimulationRandomBoids3D.h  SimulationTModel.h  SimulationUber.h  SimulationWarp.h  pedestrianVision.h  simulationwhoruwithandwhererugoing.h
models/src/: Sampler.cpp  SimulationBoids.cpp  SimulationBoids3D.cpp  SimulationHelbing.cpp  SimulationHelbing3D.cpp  SimulationHyper.cpp  SimulationOpenCS.cpp  SimulationPowerLaw.cpp  SimulationRVO2-NAV.cpp  SimulationRVO2.cpp  SimulationRVO23D.cpp  SimulationRandomBoids3D.cpp  SimulationTModel.cpp  SimulationUber.cpp  SimulationWarp.cpp  pedestrianVision.cpp  simulationwhoruwithandwhererugoing.cpp
msg/: CrowdState.msg  SimPedestrianState.msg
scenario/: GeneratedScenario.xml
scenarios/: 1to10.xml  oneway0_767.xml  oneway1.xml  oneway1_267.xml  oneway1_5.xml  oneway1_767.xml  oneway2.xml
simulations/: CMakeLists.txt
simulations/helbing/: CMakeLists.txt  helbing-config.cmake  helbing.pri
simulations/helbing-3d/: CMakeLists.txt  helbing-3d-config.cmake  helbing-3d.pri
simulations/helbing-3d/include/: Helbing3D.h  intelkdtree.h  obstacle.h  vec2f.h  vec3f.h
simulations/helbing-3d/src/: Helbing3D.cpp  vec2f.cpp  vec3f.cpp
simulations/helbing/include/: Helbing.h  intelkdtree.h  obstacle.h  vec2f.h
simulations/helbing/src/: Helbing.cpp  vec2f.cpp
simulations/mymath/: CMakeLists.txt  mymath-config.cmake  mymath.pri
simulations/mymath/include/: angles.h  line.h  mat2.h  mat3.h  mymath.h  seg2.h  seg3.h  vec2.h  vec3.h
simulations/mymath/src/: angles.cpp  mat2.cpp  mat3.cpp  mymath.cpp  seg2.cpp  seg3.cpp  vec3.cpp
simulations/powerlaw/: CMakeLists.txt  powerlaw-config.cmake  powerlaw.pri
simulations/powerlaw/include/: AgentInitialParameters.h  AnticipatoryModel.h  LineObstacle.h  PowerLawAgent.h  SimulationEngine.h
simulations/powerlaw/include/proximitydatabase/: ProximityDatabaseItem.h
simulations/powerlaw/include/util/: Definitions.h  Vector2D.h
simulations/powerlaw/src/: Example.cpp  LineObstacle.cpp  PowerLawAgent.cpp  SimulationEngine.cpp  lq2D.cpp
simulations/rvo2/: CMakeLists.txt  rvo2-config.cmake  rvo2.pri
simulations/rvo2-3d/: CMakeLists.txt  rvo2-3d-config.cmake  rvo2-3d.pri
simulations/rvo2-3d/include/: API.h  Definitions.h  RVO3D.h  RVO3DAgent.h  RVO3DKdTree.h  RVO3DSimulator.h  Vector3.h
simulations/rvo2-3d/src/: RVO3DAgent.cpp  RVO3DKdTree.cpp  RVO3DSimulator.cpp
simulations/rvo2/include/: RVO.h  RVOAgent.h
simulations/rvo2/src/: KdTree.cpp  Obstacle.cpp  RVOAgent.cpp  RVOSimulator.cpp
simulations/vision/Libraries/glm/core/: dummy.cpp  setup.hpp
simulations/vision/SVModel/: callgrind.out.24289  prog
simulations/vision/SVModel/include/: Agent.h  Application.h  CrowdModel.h  Utils.h  Utils.h~  definitions.h
simulations/vision/SVModel/shaders/: simple_fshader.fsh  simulation_vshader.vsh  sv_fshader.fsh  sv_visualization_fshader.fsh  sv_vshader.vsh  texture_visualization_fshader.fsh  texture_visualization_vshader.vsh  trail_vshader.vsh
simulations/vision/SVModel/src/: Agent.cpp  Application.cpp  Application.cpp~  CrowdModel.cpp  CrowdModel.cpp~  Utils.cpp  Utils.cpp~  main.cpp  main.cpp~
srv/: SimulateCrowd.srv
trajectories/rvo/: 1to10_crossing_powerlaw.csv  1to10_crossing_rvo.csv
