<?xml version="1.0"?>
<package>
  <name>crowdbag</name>
  <version>1.0.0</version>
  <description>CrowdBag package: a set of crowd simulation algorithms</description>

  <maintainer email="javad.amirian@inria.fr">Javad Amirian</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <author email="javad.amirian@inria.fr">Javad Amirian</author>
  <author email="fabien.grzeskowiak@inria.fr">Fabien Grzeskowiak</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>  </export>
</package>
